--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
+    "@splidejs/react-splide": "^0.7.12",
     "axios": "^1.11.0",
     "next": "15.4.6",
     "react": "19.1.0",
